test/e2e/functional/canary-scaledownonabort.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-scaledowndelay-root
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-scaledowndelay
---
apiVersion: v1
kind: Service
metadata:
  name: canary-scaledowndelay-canary
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-scaledowndelay
---
apiVersion: v1
kind: Service
metadata:
  name: canary-scaledowndelay-stable
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: canary-scaledowndelay
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-scaledowndelay-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: canary-scaledowndelay-root
          servicePort: use-annotation
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-scaledownd-on-abort
spec:
  selector:
    matchLabels:
      app: canary-scaledowndelay
  template:
    metadata:
      labels:
        app: canary-scaledowndelay
    spec:
      containers:
      - name: canary-scaledowndelay
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
  strategy:
    canary:
      abortScaleDownDelaySeconds: 1
      scaleDownDelayRevisionLimit: 1
      canaryService: canary-scaledowndelay-canary
      stableService: canary-scaledowndelay-stable
      steps:
        - setCanaryScale:
            replicas: 1
        - pause: {}
      trafficRouting:
        alb:
          ingress: canary-scaledowndelay-ingress
          rootService: canary-scaledowndelay-root
          servicePort: 80
