test/e2e/functional/nginx-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPLACEME-canary
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: REPLACEME
---
apiVersion: v1
kind: Service
metadata:
  name: REPLACEME-stable
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: REPLACEME
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REPLACEME-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: REPLACEME-stable
              servicePort: 80
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: REPLACEME
spec:
  replicas: 4
  selector:
    matchLabels:
      app: REPLACEME
  template:
    metadata:
      labels:
        app: REPLACEME
    spec:
      containers:
      - name: REPLACEME
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: REPLACEME-canary
      stableService: REPLACEME-stable
      trafficRouting:
        nginx:
          stableIngress: REPLACEME-ingress
